# EchoLayer

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  LICENSE  PROJECT_ANALYSIS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_PLAN.md  PROJECT_STATUS_REPORT.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
.ssh/: config
assets/: LOGO_SETUP.md
assets/images/: README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: main.rs
backend/src/handlers/: auth.rs  content.rs  echo_index.rs  mod.rs  propagation.rs  users.rs
backend/src/models/: content.rs  echo_index.rs  mod.rs  user.rs
backend/src/services/: echo_engine.rs  echo_service.rs  mod.rs  propagation.rs  reward_service.rs  rewards.rs
backend/src/utils/: mod.rs
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml
docs/: API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  TECHNICAL_ARCHITECTURE.md
frontend/: .env.example  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: test-setup.ts
monitoring/prometheus/: prometheus.yml
scripts/: code-quality-check.sh  deploy.sh  install.ps1  install.sh  optimize-project.sh  performance-optimizer.sh  run-dev.ps1  run-dev.sh  security-audit.sh
shared/: index.ts  package.json  tsconfig.json
shared/constants/: index.ts
shared/types/: index.ts
shared/utils/: index.ts
smart-contracts/: Anchor.toml
tests/integration/: echo_index_tests.rs
(+16 files in other folders)
