[package]
name = "echolayer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Graph database (Neo4j)
neo4rs = "0.7"

# Redis cache
redis = { version = "0.24", features = ["tokio-comp"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"

# JSON Web Tokens
jsonwebtoken = "9.2"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Math and calculations
ordered-float = "4.2"

# Metrics and monitoring
prometheus = "0.13"

# Rate limiting
governor = "0.6"

# Background jobs
tokio-cron-scheduler = "0.9"

[dev-dependencies]
actix-rt = "2.9"
tokio-test = "0.4" 